--- a/src/locales/eng.json
+++ b/src/locales/eng.json
@@ -73,7 +73,11 @@
       "p7": "Serbia is the first Western Balkan country to participate in the European Union's “Rights, Equality and Citizenship“ program. This program is important for Serbia's accession to the EU, as it covers the obligations of Chapters 23 and 24. It relates to the fight against discrimination, racism, xenophobia and homophobia, other types of intolerance, promotion of the rights of persons with disabilities, gender equality, and prevention of violence against children, women and other marginalized groups. Balancing work and parenting is a daily challenge of women and men in Europe. The aim of the new EU directive is for a parent to have a flexible work schedule and parent leave for fathers when the baby is born.",
       "p8": "European Union is the biggest donator in Serbia and it will continue to be your main partner in all initiatives which improves equality and balancing professional life and parenting“, said Mateja Norčič Štamcar“, deputy head of the EU Delegation to the Republic of Serbia.",
       "p9": "According to National Gender Equality Strategy (2016–2020) of the Republic of Serbia, 95% of women in Serbia spend 5 hours on a daily basis doing housework, while men spend almost 40% less – 3 hours and they have one hour more of free time. One of the project’s aim is also to increase the level of health literacy of employees and employers.",
-      "p10": "Media have a very important role when it comes to informing citizens about balancing the professional and private life of woman and man, but also in promoting health and a healthy lifestyle."
+      "p10": "Media have a very important role when it comes to informing citizens about balancing the professional and private life of woman and man, but also in promoting health and a healthy lifestyle.",
+      "video1": "National broadcaster – RTV Pink, Morning TV Show: Minister Slavica Đukić Dejanović",
+      "video2": "TV Studio B, Morning TV Shown: Minister Slavica Đukić Dejanović",
+      "video3": "The biggest national broadcaster -RTS-1, Dnevnik 2, Presenting the project",
+      "video4": "National TV broadcaster - Kopernikus"
   },
   "publication": {
     "title": "Category: Publications"
