--- a/src/locales/ћир.json
+++ b/src/locales/ћир.json
@@ -52,7 +52,7 @@
         "news": "Вести"
     },
     "app": {
-        "disclaimer": "Садржај овог документа искључиво представља ставове Кабинета министра без портфеља задуженог  демографију и популациону политику и Фондације Ана и Владе Дивац за које су они искључиво одговорни. Европска комисија не прихвата никакву одговорност за начин на који се употребљавају информације које садржи.",
+        "disclaimer": "Овај вебсајт је израђен уз финансијску подршку Европске комисије. За садржај вебсајт искључиво су одговорни Кабинет министра без портфеља задуженог за демографију и популациону политику и Фондација Ана и Владе Дивац и не може се ни под којим околностима сматрати да овај документ представља ставове Европске комисије. Пројекат „Једнаки - ка родној равноправности усклађивањем радног и породичног живота запослених“ финансиран је из програма Европске уније „Права, једнакост и држављанство (2014-2020)“.",
         "name": "Урош Димитријевић"    
     },
     "news": {
@@ -62,7 +62,9 @@
         "read": "Прочитај више",
         "back": "ВРАТИ СЕ",
         "title2": "Једнаки и солидарни и у најтежим временима",
-        "section2": "Министарка без портфеља задужена за демографију и популациону полтику проф. др Славица Ђукић Дејановић говори о актуелној ситуацији у вези са корона вирусом, како можемо да помогнемо себи и другима, да ли постоје и неке позитивне ствари које можемо повезати са пандемијом COVID-19, али и о усклађивању рада и родитељства и нивоу здравствене писмености. Кабинет министра без портфеља задуженог за демографију и популациону политику, у сарадњи са Фондацијом  ..."
+        "section2": "Министарка без портфеља задужена за демографију и популациону полтику проф. др Славица Ђукић Дејановић говори о актуелној ситуацији у вези са корона вирусом, како можемо да помогнемо себи и другима, да ли постоје и неке позитивне ствари које можемо повезати са пандемијом COVID-19, али и о усклађивању рада и родитељства и нивоу здравствене писмености. Кабинет министра без портфеља задуженог за демографију и популациону политику, у сарадњи са Фондацијом  ...",
+        "title3": "Представљање приручника и јавна дебата „Усклађивање радног и породичног живота запослених“",
+        "section3": "У оквру пројекта „ЈЕДНАКИ – Ка успостављању родне равноправности усклађивањем радног и породичног живота запослених“ предвиђено је 20 јавних дебата у општинама у Србији. Фондација Ана и Владе Дивац у сарадњи са Кабинетом министра без портфеља задуженог за демографију и популациону политику је до сада организовала три јавне онлине дебате под именом „Усклађивање радног и породичног живота запослених“ за грађане општине Сремски Карловци, Бечеј и Стари град. Аутор..."
     },
     "oneNews": {
         "header": "Представљање пројекта “ЈЕДНАКИ - Ка родној равноправности усклађивањем радног и породичног живота запослених“",
@@ -97,6 +99,10 @@
         "p12": " 5.  Мере друштвеног дистанцирања утичу и на ментално здравље. Да ли имате препоруку на који начин можемо помоћи себи или другима у случајевима појаве панике, анксиозности или осталих проблема менталног здравља изазваних самоизолацијом или продуженим боравком код куће?",
         "p13": "Као психијатар разумем наопходност очувања менталног здравља, које је подједнако важно као и оно телесно. Мере социјалног дистанцирања су тешке, али су у овом тренутку неопходне и све је већи број особа које могу осетити нелагоду или панику због новонастале ситуације. Важно је планирати и структурисати свој дан и испунити га разноврсним обавезама, како би време које проведемо код куће провели што активније. Посматрајте тренутну ситуацију као прилику да завршите неке послове за које до сада нисте проналазили времена. Прочитајте нову књигу, погледајте неки инспиративан филм, поспремите фиоку у коју дуго одлажете разноразне папире. Уколико се јави осећај нелагоде или други симптоми које можете повезати са актуелним анти-епидемијским мерама важно је да останете прибрани и смирени. Разговарајте са пријатељима путем телефона и то посебно са онима за које знате да ће на вас деловати умирујуће, а можете да потражите и савет стручњака. Грађани Србије могу рачунати и на моју стручну помоћ  сваке вечери од 21:00 до 22:30."
     },
+    "oneNews3": {
+        "p1": "У оквру пројекта „ЈЕДНАКИ – Ка успостављању родне равноправности усклађивањем радног и породичног живота запослених“ предвиђено је 20 јавних дебата у општинама у Србији. Фондација Ана и Владе Дивац у сарадњи са Кабинетом министра без портфеља задуженог за демографију и популациону политику је до сада организовала три јавне онлине дебате под именом „Усклађивање радног и породичног живота запослених“ за грађане општине Сремски Карловци, Бечеј и Стари град. Аутор приручника „Приручник за запослене - Усклађивање радног и породичног живота“ проф. др Бојан Урдаревић је говорио о радним правима запослених и законским оквирима који омогућавају боље усклађивање радног и породичног живота.",
+        "p2": "Проф.др Бојан Урадревић је представио садржај приручника, концепт и мотив израде и нагласио је да постоји слабо разумевање и знање из радног односа код наших запослених, где се често може чути да је запослени морао да се одрекне права на годишњи одмор, породиљско одсуство и сл. Такође, професор је навео да ће криза услед КОВИД-19  из темеља уздрмати радне односе, где је током три и по месеца изгубљен велики број радних сати, према истраживању МОР-а. Приручник посебну пажњу поклања запосленим мајкама и третира зараде и накнаду зараде, врсте радног односа, радно време и одсуства и сл. Навео је и да је током месец дана отпуштено 12.000 људи, што је додатни изазов да се тема радног права постави у фокус."
+    }, 
     "publication": {
         "title": "Категорија: Публикације"
     }
